--- a/webathon.css
+++ b/webathon.css
@@ -323,3 +323,30 @@ ol {
         flex: 2 0px;
     }
 }
+
+@media screen and (max-width: 600px) {
+    .header {
+        height: 90px;
+        width: 100vw;
+    }
+    .container {
+        height: 100vh;
+        width: 100vw;
+        text-align: center;
+        background-size: 300%;
+    }
+    .container h1,
+    p {
+        font-size: 20px;
+        color: rgb(141, 139, 139);
+        margin-top: 200px;
+    }
+    .container p {
+        margin-top: -100px;
+        font-size: 30px;
+        color: black;
+    }
+    #alert {
+        margin-top: 70px;
+    }
+}
